# view-bomber

./: .gitignore  .oxlintrc.json  APACHE_NOTICES.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  dprint.json  mise.toml  package-lock.json  package.json  vite.config.ts
.github/workflows/: quality.yml
.husky/: pre-commit
docs/: export-pdf.md  index.html
plans/: dxf-autocad-gap-checklist.md  file-extension-roadmap.md
scripts/: generate-third-party-licenses.mjs  prepare-pdf-tools.mjs  viewb.mjs
src/: App.css  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs
src/components/: EmptyState.tsx  FileTree.tsx  FileTreeItem.tsx  FindBar.tsx  MarkdownViewer.tsx  MermaidBlock.tsx  SearchBar.tsx  SearchResults.tsx  Sidebar.tsx  Toolbar.tsx  fileIcon.tsx
src/context/: AppContext.tsx
src/lib/: tauri.ts  useFindInFile.ts  useOpenFolder.ts  useSearch.ts  useTheme.ts  workspaceStore.ts
src/types/: index.ts
src/viewers/: fileTypes.ts  geojson.ts  registry.ts  textFormats.ts
src/viewers/plugins/: csv.tsx  duckdb.tsx  dxf.tsx  geojson.tsx  html.tsx  image.tsx  json.tsx  markdown.tsx  parquet.tsx  pdf.tsx  text.tsx  xlsx.tsx
tools/: pdf-tools.lock.json
