[package]
name = "view-bomber"
version = "0.1.0"
description = "A view-bomber Desktop App"
authors = ["you"]
edition = "2021"
license = "MIT"
readme = "../README.md"

[lib]
name = "view_bomber_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = { version = "2", features = ["watch"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
calamine = "0.26"
quick-xml = "0.38"
zip = "2"
csv = "1"
chardetng = "0.1"
parquet = "53"
duckdb = { version = "1", features = ["bundled"] }
